--- a/index.css
+++ b/index.css
@@ -3,19 +3,35 @@ body, html{
   padding: 0;
   background-color: brown;
   width: 100%;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 header {
   align-items:center;
+  font-family:'Times New Roman', Times, serif;
   justify-content:center;
-  background-color: transparent;
-  padding: 10px 20px;
+  background: rgba(122, 121, 121, 0.1);
+  padding: 0px;
   position: fixed;
   top:0;
   width: 100%;
   margin-bottom: 100px;
   transition: all 0.8s ease-in-out;
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(10px);
+  border-bottom-width: 1px;
+  border-bottom-color: aliceblue;
+  border-bottom: 1px solid rgb(223, 219, 219, .5);
+}
+header::before{
+  content: '';
+  position:absolute;
+  top:0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2)) transparent;
+  transition: .3s;
+}
+header:hover::before{
+  left: 100%;
 }
 header:hover{
   background-color: transparent;
@@ -24,8 +40,7 @@ header:hover{
 nav {
   margin: 0;
   display: flex;
-  align-items: center;
-  gap: 50px;  
+  align-items: center; 
   flex-wrap:wrap;
   float:right;
   margin-right: 50px;
@@ -41,9 +56,8 @@ nav a {
   text-decoration: none;
   color: white;
   font-weight: 500;
-  padding: 10px 15px;
+  padding: 20px 25px;
   display: block;
-  border-radius: 7px;
   background-color: transparent;
   transition: all 0.5s ease-out;
 }
@@ -51,9 +65,25 @@ nav a {
 nav a:hover {
   background-color: red;
   color: white;
-  border-radius: 5px;
   transition: background-color 0.3s ease;
+}
+footer{
+  background-color: black;
+  display: block;
 }
 img{
   width: 100%;
+
+}
+.titre{
+  position: absolute;
+}
+@media (max-width: 768px) {
+  nav > a{
+    font-size: 50%;
+  }
+
+  header {
+
+  }
 }
