--- a/index.css
+++ b/index.css
@@ -89,12 +89,12 @@ img{
 
 
 nav.content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    align-items: center;    
-    min-height: 80vh;       
-    text-align: center;      
+    position: absolute;      
+    top: 50%;                 
+    left: 50%;                
+    transform: translate(-50%, -50%);
+    text-align: center;       
+    z-index: 2;              
 }
 
 @media (max-width: 768px) {
@@ -102,4 +102,3 @@ nav.content {
     font-size: 50%;
   }
 }
-
