--- a/index.css
+++ b/index.css
@@ -74,9 +74,14 @@ nav a:hover {
   transition: background-color 0.3s ease;
 }
 
-footer{
+footer {
   background-color: black;
   display: block;
+  color: white;      
+  position: relative; 
+  z-index: 5;        
+}
+
 }
 
 img{
