--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ nav {
   float:right;
   margin-right: 120px;
 }
-.logo{
+.logo img{
   display: flex;
   float: left;
   height: 65px;
@@ -54,7 +54,7 @@ nav {
   padding: 7px;
 }
 
-nav > button{
+nav  button{
   text-decoration: none;
   color: white;
   font-weight: 300;
@@ -66,7 +66,7 @@ nav > button{
   border-style: none;
 }
 
-nav > button:hover {
+nav  button:hover {
   background-color: red;
   color: white;
   transition: background-color 0.3s ease;
