--- a/Styles_fonctionnement.css
+++ b/Styles_fonctionnement.css
@@ -49,6 +49,11 @@ body h2 {
   margin-left: 200px;
 }
 
+.paragraphe_2 {
+  margin-top: 200px;
+  margin-left: 25px;
+}
+
 body img {
   margin-top: 75px;
 }
