--- a/index.css
+++ b/index.css
@@ -187,7 +187,7 @@ nav #ETHIQUE:hover::after{
   background: transparent;
   backdrop-filter: blur(4px);
 }
-.acceuil>video{
+.acceuil>img{
   width: 100%;
   z-index: -1;
 }
