--- a/Assets/css/Styles_fonctionnement.css
+++ b/Assets/css/Styles_fonctionnement.css
@@ -169,7 +169,7 @@ nav #ETHIQUE:hover::after{
   background-color: #a9d3ff;
 }
 
-.paragraphe {
+.paragraphe1 {
   width: calc(100% - 120px);
   margin: 60px 60px 0 60px;
   display: flex;
@@ -178,7 +178,7 @@ nav #ETHIQUE:hover::after{
   gap: 60px;
 }
 
-.paragraphe > div {
+.paragraphe1 > div {
   background-color: #a9d3ff;
   box-shadow: -7px 10px #96C5F7;
   width: calc(100% - 360px);
@@ -191,7 +191,29 @@ nav #ETHIQUE:hover::after{
   border-radius: 30px;
 }
 
-section > a > img{
+.paragraphe2 {
+  width: calc(100% - 120px);
+  margin: 60px 60px 0 60px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 60px;
+}
+
+.paragraphe2 > div {
+  background-color: #a9d3ff;
+  box-shadow: 7px 10px #96C5F7;
+  width: calc(100% - 360px);
+  max-width: 840px;
+  padding: 30px 30px;
+  min-height: 240px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 30px;
+}
+
+.img_droite{
   height: 300px;
   width: 400px;
   border-style: solid;
@@ -200,13 +222,31 @@ section > a > img{
   box-shadow: 5px 7px black;
 }
 
-section > a > img:hover{
+.img_droite:hover{
   height: 300px;
   width: 400px;
   border-style: solid;
   border-color: #a9d3ff;
   border-radius: 30px;
   box-shadow: 5px 7px #96C5F7;
+}
+
+.img_gauche {
+  height: 300px;
+  width: 600px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 30px;
+  box-shadow: -5px 7px black;
+}
+
+.img_gauche:hover{
+  height: 300px;
+  width: 600px;
+  border-style: solid;
+  border-color: #a9d3ff;
+  border-radius: 30px;
+  box-shadow: -5px 7px #96C5F7;
 }
 
 footer {
