--- a/Assets/css/style-ethique.css
+++ b/Assets/css/style-ethique.css
@@ -85,6 +85,12 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+.chau-philomene-one-regular {
+  font-family: "Chau Philomene One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 
 /*IMG INTRO */
