--- a/Assets/css/Styles_fonctionnement.css
+++ b/Assets/css/Styles_fonctionnement.css
@@ -1,5 +1,25 @@
 body {
     background-color: #F2F4FF;
+    background: url(Assets/images/fond-fonctionnement.jpg);
+    background-size: cover, 200px auto;
+}
+
+.anton-regular {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.chau-philomene-one-regular {
+  font-family: "Chau Philomene One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.chau-philomene-one-regular-italic {
+  font-family: "Chau Philomene One", sans-serif;
+  font-weight: 400;
+  font-style: italic;
 }
 
 header {
@@ -163,10 +183,24 @@ nav #ETHIQUE:hover::after{
 }
 
 .intro {
-  width: calc(100% - 100px);
-  margin: 110px 50px 0 50px;
-  border-radius: 30px;
-  background-color: #a9d3ff;
+  width: 100%;
+}
+
+.graph {
+  width:750px; 
+  border-radius: 10px; 
+  margin-top: 175px; 
+  margin-bottom: 30px; 
+  z-index: 1;
+}
+
+.fond1 {
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+  width: 100%;
 }
 
 .paragraphe1 {
@@ -176,6 +210,7 @@ nav #ETHIQUE:hover::after{
   align-items: flex-start;
   justify-content: center;
   gap: 60px;
+  margin-top: 250px;
 }
 
 .paragraphe1 > div {
