--- a/Assets/css/stylehistoire.css
+++ b/Assets/css/stylehistoire.css
@@ -7,6 +7,7 @@ body, html{
   width: 100%;
   background-color:var(--fond);
 }
+/*-------DEBUT------*/
 header {
   align-items:center;
   justify-content:center;
@@ -19,7 +20,7 @@ header {
   transition: all 0.8s ease-in-out;
   backdrop-filter: blur(10px);
   z-index: 5;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 10px 20px rgba(255, 255, 255, .2), 5px 5px 5px rgba(0, 0, 0, 0.1);
   font-family:'Times New Roman', Times, serif;
 }
 header::before{
@@ -60,19 +61,20 @@ nav {
 
 nav  button{
   text-decoration: none;
-  color: black;
+  color: white;
   position: relative;
   font-weight: 300;
   font-size: 24px;
-  padding: 30px 20px;
+  padding: 20px 20px;
   display: inline-block;
   background-color: transparent;
   transition: all 0.5s ease-in-out;
   border-style: none;
 }
 nav button:hover , button span:hover{
-  text-shadow: 5px 5px 5px rgba(255, 255, 255, 1);
+  text-shadow: 5px 5px 5px rgba(255, 255, 255, 0.8);
 }
+
 nav #HISTOIRE{
   display: inline-block;
   position: relative;
@@ -87,7 +89,7 @@ nav #HISTOIRE:after {
   transition: 0.5s;
 }
 
-nav #HISTOIRE:hover {
+#HISTOIRE:hover {
   padding-right: 25px;
 }
 
@@ -95,7 +97,6 @@ nav #HISTOIRE:hover::after{
   opacity: 1;
   right: 0;
 }
-
 
 nav #ECONOMIE{
   display: inline-block;
@@ -119,7 +120,6 @@ nav #ECONOMIE:hover::after{
   opacity: 1;
   right: 0;
 }
-
 nav #FONCTIONNEMENT{
   display: inline-block;
   position: relative;
@@ -165,6 +165,165 @@ nav #ETHIQUE:hover::after{
   opacity: 1;
   right: 0;
 }
+/*-------FIN------*/
+
+/*---------FOOTER--------*/
+/*---------DEBUT---------*/
+
+footer{
+  background-color: var(--bleu-clair);
+  display: block;
+  margin: 0;
+  padding: 0;
+  height: 450px;
+  justify-content: end;
+  color: aliceblue;
+  padding: 100px 120px 50px;
+  gap: 20px;
+  bottom: 0;
+  overflow:hidden;
+  border-top: solid 1px var(--anthracite);
+}
+footer .reseaux {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: row;
+  margin-left: 30px;
+  position: absolute;
+  margin-top: 110px;
+  margin-left: 10px;
+}
+footer .reseaux a {
+  width: 3%;
+  gap: 25px;
+  margin: 10px 10px 10px 0px;
+  transition: all .2s ease-in-out;
+}
+footer .reseaux img{
+  width: 100%;
+  border-radius: 50%;
+}
+#logo_SN{
+  margin-left: 100px;
+}
+#logo_SL1:hover{
+  scale: 1.1;
+}
+#logo_SL2:hover{
+  scale: 1.1;
+}
+#logo_SL3:hover{
+  scale: 1.1;
+}
+#logo_SL4:hover{
+  scale: 1.1;
+}
+#logo_SN:hover{
+  scale: 1.1;
+}
+footer .liens{
+  text-align: center;
+  color: black;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  flex-direction: row;
+  float: right;
+  border: 1px solid rgba(200, 200, 200, 0.2);
+  gap: 20px;
+  padding: 20px;
+  border-radius: 20px;
+}
+footer .liens > div{
+  border: 1px dashed rgba(100, 100, 100, 0.1);
+  padding: 30px;
+  border-radius: inherit;
+}
+footer .liens h1{
+  margin: 0 0 30px 0;
+  font-size: 30px;
+}
+footer .sous-liens p{
+  color: black;
+  text-decoration: black;
+}
+footer .histoire{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+}
+.suivre{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: row;
+  float: left;
+  color: black;
+  padding-right: 10px;
+}
+#Suivez-les{
+  text-align: left;
+  margin-left: 85px;
+  margin-top: 40px;
+  width: 70px;
+  font-weight: bold;
+}
+#SN_hr{
+  float: left;
+  margin-top: 0;
+  width: 50px;
+  margin-left: 90px;
+  margin-right: 0;
+  color:  #e60000;
+  border-color: #e60000;
+  border-radius: 10px;
+}
+#Suivez-nous{
+  float: right;
+  margin-left: 145px;
+  margin-top: 40px;
+  margin-bottom: 0;
+  padding-top: 0;
+  font-weight: bold;
+}
+#SL_hr{
+  margin-top: 0;
+  width: 50px;
+  float: right;
+  color:  #224cf4;
+  border-color: #224cf4;
+  border-radius: 10px;
+  margin-right: 90px;
+}
+footer>p{
+  padding-top: 50px;
+  text-align: center;
+  margin-top: 0;
+  color: black;
+}
+#YWH{
+  width: 20%;
+  float: left;
+  margin-right: 15px;
+}
+#Y{
+  width: 10%;
+  float: left;
+}
+#img_acceuille{
+  width: 100%;
+  margin: 0;
+}
+footer #mentions{
+  margin-top: 330px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.5);
+}
+/*-------FIN------*/
 
 
 
@@ -201,42 +360,31 @@ body{
   font-style: normal;
 }
 
-/* Couleurs textes / titre*/
+
+/* ----------------
+- TEXTE ET IMAGES -
+---------------- */
 h3 {
   display:flex;
-  justify-content:center;
-  color:var(--titre);
+  color:var(--noir);
   font-size:30px;
 }
 
 .texte {
-  color:var(--texte);
+  background-color:var(--texte);
+  border-radius:10px;
+  padding:10px;
+  color:var(--noir);
   font-size:20px;
 }
 
 /* Images */
-.img-gauche {
-  display:flex;
-  justify-content:left;
-  border-radius:10px;
-}
 .img-gauche img {
   border-radius:10px;
 }
 
-.img-droite {
-  display:flex;
-  justify-content:right;
-  border-radius:10px;
-}
 .img-droite img {
   border-radius:10px;
-}
-
-/* Texte */
-.texte {
-  display:flex;
-  justify-content:center;
 }
 
 /* --------------
@@ -281,23 +429,29 @@ DEUXIÈME SECTION
 TROISIEME SECTION
 --------------- */
 .section-debut {
+  display: flex;
+  gap: 40px;
+  padding: 60px 100px;
   background-color:var(--blanc);
 }
 
 /* --------------
 QUATRIEME SECTION
 --------------- */
+.section-expansion {
+  display: flex;
+  gap: 40px;
+  padding: 60px 100px;
+  background-color:var(--fond);
+}
+
 
 /* --------------
 CINQUIEME SECTION
 --------------- */
 .section-aujd {
+  display: flex;
+  gap: 40px;
+  padding: 60px 100px;
   background-color:var(--blanc);
-}
-
-/* ---------------
------ FOOTER -----
---------------- */
-footer {
-  border-top: 1px solid var(--anthracite);
 }
