--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -78,7 +78,7 @@ nav {
   padding: 5px;
 }
 
-nav  button{
+nav  a{
   text-decoration: none;
   color: white;
   position: relative;
@@ -90,7 +90,7 @@ nav  button{
   transition: all 0.5s ease-in-out;
   border-style: none;
 }
-nav button:hover , button span:hover{
+nav a:hover , a span:hover{
   text-shadow: 5px 5px 5px rgba(255, 255, 255, 0.8);
 }
 
@@ -212,7 +212,7 @@ nav #ETHIQUE:hover::after{
 .acceuil>img{
   width: 100%;
   z-index: -1;
-  border-bottom: 5px solid rgb(255,255,255);
+  border-bottom: 5px solid rgb(0, 0, 0);
 }
 .acceuil{
   background-color: var(--bleu-moyen);
@@ -531,7 +531,7 @@ nav #ETHIQUE:hover::after{
   background-color: #f2f4ff;
   padding-right: 40px;
   overflow:hidden;
-  box-shadow:  0 0 30px #ca798c, inset 0 -10px 30px rgba(252, 252, 252, 0.5);
+  box-shadow: inset 0 -10px 30px rgba(252, 252, 252, 0.5);
   border: 5px solid rgba(252, 252, 252, 0.4);
 }
 .ligne2 .block_3:hover{
@@ -553,7 +553,6 @@ nav #ETHIQUE:hover::after{
 .ligne2 .block_2:hover ~ .block_3{
   background-color: var(--bleu-clair);
   box-shadow: none;
-  box-shadow: 0 0 30px #2a9c37;
 }
 .ligne2 .block_3 > #sec{
   width: 100%;
@@ -795,10 +794,10 @@ nav #ETHIQUE:hover::after{
 .contenu_2{
   height: 1000px;
   margin: 0;
-  padding-bottom: 50px;
+  padding-bottom: 0px;
   padding-top: 0px;
   overflow: hidden;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
 }
 
 .presentation_1{
