--- a/Assets/css/style-ethique.css
+++ b/Assets/css/style-ethique.css
@@ -268,23 +268,158 @@ blockquote {
   font-size: 1.05rem;
 }
 
-footer {
-  background-color: #003366;
-  color: #F2F4FF;
-  text-align: center;
-  padding: 25px 0;
-  margin-top: 60px;
-  font-size: 1rem;
-  border-top: 3px solid #A9D3FF;
+footer{
+  background-color: var(--bleu-clair);
+  display: block;
+  margin: 0;
+  padding: 0;
+  height: 450px;
+  justify-content: end;
+  color: aliceblue;
+  padding: 100px 120px 50px;
+  gap: 20px;
+  bottom: 0;
+  overflow:hidden;
 }
- .reseau img{
-  width: 2%;
- }
- footer small{float: left;}
- 
- .reseau p{
-  margin-right: 15%;
- }
+footer .reseaux {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: row;
+  margin-left: 30px;
+  position: absolute;
+  margin-top: 110px;
+  margin-left: 10px;
+}
+footer .reseaux a {
+  width: 3%;
+  gap: 25px;
+  margin: 10px 10px 10px 0px;
+  transition: all .2s ease-in-out;
+}
+footer .reseaux img{
+  width: 100%;
+  border-radius: 50%;
+}
+#logo_SN{
+  margin-left: 100px;
+}
+#logo_SL1:hover{
+  scale: 1.1;
+}
+#logo_SL2:hover{
+  scale: 1.1;
+}
+#logo_SL3:hover{
+  scale: 1.1;
+}
+#logo_SL4:hover{
+  scale: 1.1;
+}
+#logo_SN:hover{
+  scale: 1.1;
+}
+footer .liens{
+  text-align: center;
+  color: black;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  flex-direction: row;
+  float: right;
+  border: 1px solid rgba(200, 200, 200, 0.2);
+  gap: 20px;
+  padding: 20px;
+  border-radius: 20px;
+}
+footer .liens > div{
+  border: 1px dashed rgba(100, 100, 100, 0.1);
+  padding: 30px;
+  border-radius: inherit;
+}
+footer .liens h1{
+  margin: 0 0 30px 0;
+  font-size: 30px;
+}
+footer .sous-liens p{
+  color: black;
+  text-decoration: black;
+}
+footer .histoire{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+}
+.suivre{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: row;
+  float: left;
+  color: black;
+  padding-right: 10px;
+}
+#Suivez-les{
+  text-align: left;
+  margin-left: 85px;
+  margin-top: 40px;
+  width: 70px;
+  font-weight: bold;
+}
+#SN_hr{
+  float: left;
+  margin-top: 0;
+  width: 50px;
+  margin-left: 90px;
+  margin-right: 0;
+  color:  #e60000;
+  border-color: #e60000;
+  border-radius: 10px;
+}
+#Suivez-nous{
+  float: right;
+  margin-left: 145px;
+  margin-top: 40px;
+  margin-bottom: 0;
+  padding-top: 0;
+  font-weight: bold;
+}
+#SL_hr{
+  margin-top: 0;
+  width: 50px;
+  float: right;
+  color:  #224cf4;
+  border-color: #224cf4;
+  border-radius: 10px;
+  margin-right: 90px;
+}
+footer>p{
+  padding-top: 50px;
+  text-align: center;
+  margin-top: 0;
+  color: black;
+}
+#YWH{
+  width: 20%;
+  float: left;
+  margin-right: 15px;
+}
+#Y{
+  width: 10%;
+  float: left;
+}
+#img_acceuille{
+  width: 100%;
+  margin: 0;
+}
+footer #mentions{
+  margin-top: 330px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.5);
+}
 /*  NETTO*/
 * {
   box-sizing: border-box;
