--- a/Assets/css/Styles_fonctionnement.css
+++ b/Assets/css/Styles_fonctionnement.css
@@ -1,25 +1,33 @@
 body {
-    background-color: #F2F4FF;
     background: url(Assets/images/fond-fonctionnement.jpg);
     background-size: cover, 200px auto;
+}
+
+.anton-regular-nav {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .anton-regular {
   font-family: "Anton", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 40px;
 }
 
 .chau-philomene-one-regular {
   font-family: "Chau Philomene One", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 25px;
 }
 
 .chau-philomene-one-regular-italic {
   font-family: "Chau Philomene One", sans-serif;
   font-weight: 400;
   font-style: italic;
+  font-size: 25px;
 }
 
 header {
@@ -34,7 +42,7 @@ header {
   transition: all 0.8s ease-in-out;
   backdrop-filter: blur(10px);
   z-index: 5;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 10px 20px rgba(255, 255, 255, .2), 5px 5px 5px rgba(0, 0, 0, 0.1);
   font-family:'Times New Roman', Times, serif;
 }
 header::before{
@@ -71,24 +79,24 @@ nav {
   height: 4%;
   width: 4%;
   padding: 5px;
-  margin: 0px;
 }
 
 nav  button{
   text-decoration: none;
-  color: black;
+  color: white;
   position: relative;
   font-weight: 300;
   font-size: 24px;
-  padding: 30px 20px;
+  padding: 20px 20px;
   display: inline-block;
   background-color: transparent;
   transition: all 0.5s ease-in-out;
   border-style: none;
 }
 nav button:hover , button span:hover{
-  text-shadow: 5px 5px 5px rgba(255, 255, 255, 1);
+  text-shadow: 5px 5px 5px rgba(255, 255, 255, 0.8);
 }
+
 nav #HISTOIRE{
   display: inline-block;
   position: relative;
@@ -103,7 +111,7 @@ nav #HISTOIRE:after {
   transition: 0.5s;
 }
 
-nav #HISTOIRE:hover {
+#HISTOIRE:hover {
   padding-right: 25px;
 }
 
@@ -111,7 +119,6 @@ nav #HISTOIRE:hover::after{
   opacity: 1;
   right: 0;
 }
-
 
 nav #ECONOMIE{
   display: inline-block;
@@ -135,7 +142,6 @@ nav #ECONOMIE:hover::after{
   opacity: 1;
   right: 0;
 }
-
 nav #FONCTIONNEMENT{
   display: inline-block;
   position: relative;
@@ -192,6 +198,18 @@ nav #ETHIQUE:hover::after{
   margin-top: 175px; 
   margin-bottom: 30px; 
   z-index: 1;
+  margin-left: 100px;
+}
+
+.titre {
+  font-family: "Anton", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 100px;
+  color: white;
+  margin-top: 300px;
+  margin-left: 200px;
+  z-index: 1;
 }
 
 .fond1 {
@@ -224,6 +242,11 @@ nav #ETHIQUE:hover::after{
   flex-direction: column;
   justify-content: center;
   border-radius: 30px;
+  transition: all 0.25s ease-in-out;
+}
+
+.paragraphe1 > div:hover {
+  transform: scale(1.1);
 }
 
 .paragraphe2 {
@@ -246,42 +269,105 @@ nav #ETHIQUE:hover::after{
   flex-direction: column;
   justify-content: center;
   border-radius: 30px;
+  transition: all 0.25s ease-in-out;
 }
 
-.img_droite{
-  height: 300px;
-  width: 400px;
+.paragraphe2 >div:hover {
+  transform: scale(1.1);
+}
+
+
+.paragraphe3 {
+  width: calc(100% - 120px);
+  margin: 60px 60px 0 60px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 60px;
+}
+
+.paragraphe3 > div {
+  background-color: #a9d3ff;
+  box-shadow: -7px 10px #96C5F7;
+  width: calc(100% - 360px);
+  max-width: 840px;
+  padding: 30px 30px;
+  min-height: 240px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 30px;
+  transition: all 0.25s ease-in-out;
+}
+
+.paragraphe3 > div:hover {
+  transform: scale(1.1);
+}
+
+.img_1{
+  height: 400px;
+  width: 500px;
   border-style: solid;
   border-color: black;
   border-radius: 30px;
   box-shadow: 5px 7px black;
+  margin-top: 25px;
+  transition: all 0.25s ease-in-out;
 }
 
-.img_droite:hover{
-  height: 300px;
-  width: 400px;
+.img_1:hover{
+  height: 400px;
+  width: 500px;
   border-style: solid;
   border-color: #a9d3ff;
   border-radius: 30px;
   box-shadow: 5px 7px #96C5F7;
+  margin-top: 25px;
+  transform: scale(1.1);
 }
 
-.img_gauche {
+.img_2 {
   height: 300px;
   width: 600px;
   border-style: solid;
   border-color: black;
   border-radius: 30px;
   box-shadow: -5px 7px black;
+  margin-top: 100px;
+  transition: all 0.25s ease-in-out;
 }
 
-.img_gauche:hover{
+.img_2:hover{
   height: 300px;
   width: 600px;
   border-style: solid;
   border-color: #a9d3ff;
   border-radius: 30px;
   box-shadow: -5px 7px #96C5F7;
+  margin-top: 100px;
+  transform: scale(1.1);
+}
+
+.img_3{
+  height: 450px;
+  width: 400px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 30px;
+  box-shadow: 5px 7px black;
+  margin-top: 80px;
+  transition: all 0.25s ease-in-out;
+}
+
+.img_3:hover{
+  height: 450px;
+  width: 400px;
+  border-style: solid;
+  border-color: #a9d3ff;
+  border-radius: 30px;
+  box-shadow: 5px 7px #96C5F7;
+  transform: scale(1.1);
+  margin-top: 80px;
 }
 
 footer {
